# monorepo

./: .gitignore  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
.github/helpers/: check_gofmt.sh  check_goimports.sh
.github/workflows/: deploy_qa3.yml  main.yml
common/awsx/: BUILD.bazel  README.md  config.go  config_test.go  doc.go  logger.go  logger_test.go
common/configloader/: BUILD.bazel  loader.go  loader_test.go
common/configloader/testdata/: with_vault_path.yaml
common/contextkeys/: BUILD.bazel  contextkeys.go
common/graceful/: BUILD.bazel  context.go  context_test.go
common/httputils/: BUILD.bazel  client.go  client_example_test.go  client_test.go  config.go  mock.go  mock_example_test.go  mock_test.go  polaris_headers.go  polaris_headers_test.go  reverse_proxy.go  reverse_proxy_test.go
common/httputils/httptester/: BUILD.bazel  http_tester.go  http_tester_test.go
common/httputils/interceptors/: BUILD.bazel  authorization.go  authorization_test.go  interceptors.go  limiter.go  limiter_test.go  monitoring.go  monitoring_route_matcher.go  monitoring_route_matcher_test.go  secrets.go  secrets_test.go  tracing.go  tracing_test.go  user_agent.go  user_agent_test.go
common/httputils/svcauth/: BUILD.bazel  svcauth.go  svcauth_test.go  token_getter.go
common/jwt/: BUILD.bazel  jwt.go  jwt_hmac.go  jwt_hmac_test.go  jwt_rsa.go  jwt_rsa_public.go  jwt_rsa_test.go  jwt_test.go
common/logging/: BUILD.bazel  config.go  func.go  integration_test.go  level.go  logger.go  noop.go
common/logging/benchmarks/: BUILD.bazel  flags.go  performances_test.go
common/logging/glog/: BUILD.bazel  glog.go
common/logging/loggingtest/: BUILD.bazel  mock.go  recorder.go  testing.go
common/logging/logrus/: BUILD.bazel  hook_app_name.go  hook_caller.go  hook_version.go  logrus.go  logrus_test.go
common/logging/slog/: BUILD.bazel  caller.go  slog.go  slog_test.go
common/monitoring/: BUILD.bazel  README.md  context.go
common/monitoring/internal/runtime/: BUILD.bazel  tags.go
common/monitoring/metrics/: BUILD.bazel  global.go  metrics.go  noop.go
common/monitoring/metrics/ddmetrics/: BUILD.bazel  client.go  config.go
common/monitoring/metrics/mocks/: .gitignore  BUILD.bazel  Float64ObservableCounter.go  Float64ObservableGauge.go  Float64ObservableUpDownCounter.go  Int64ObservableCounter.go  Int64ObservableGauge.go  Int64ObservableUpDownCounter.go
common/monitoring/metrics/otelmetrics/: BUILD.bazel  config.go  error_handler.go  noop.go  provider.go
common/monitoring/profiling/: BUILD.bazel  README.md  config.go  service.go
common/monitoring/semconv/: BUILD.bazel  attribute_group.go  metric.go  resource.go  schema.go
common/monitoring/semconv/schemas/: 1.0.0
common/monitoring/tracing/: BUILD.bazel  README.md  global.go  noop.go  tag.go  tracing.go
common/monitoring/tracing/ddtracing/: BUILD.bazel  config.go  logger.go  service.go  tag.go
common/monitoring/tracing/oteltracing/: BUILD.bazel  config.go  provider.go
common/pagination/: BUILD.bazel
common/pointer/: BUILD.bazel  README.md  pointer.go  pointer_test.go
common/retrierx/: BUILD.bazel  retrier.go  retrier_test.go
common/secret/: BUILD.bazel  query_params.go  query_params_test.go  string.go  string_test.go
common/useragent/: BUILD.bazel  platform.go  platform_test.go
domains/: ReadMe.md
domains/bearwise/data/: readme.md  setup_local_pg_docker.sh  sqitch.conf  sqitch.plan  sqitch_run.sh
domains/bearwise/data/deploy/: create_schema_001.sql  insert_intervals_006.sql  insert_types_003.sql  s001_create_schema.sql  s002_insert_families.sql  s004_insert_indicators.sql  s005_insert_indicators_families.sql
domains/bearwise/data/revert/: create_schema_001.sql  insert_families_002.sql  insert_indicators_families_005.sql  s001_create_schema.sql  s003_insert_types.sql  s004_insert_indicators.sql  s005_insert_indicators_families.sql  s006_insert_intervals.sql
domains/bearwise/data/verify/: create_schema_001.sql  insert_families_002.sql  insert_types_003.sql  s001_create_schema.sql  s004_insert_indicators.sql  s005_insert_indicators_families.sql  s006_insert_intervals.sql
domains/sample_app/: BUILD  main.go
domains/sample_library/: BUILD  sample_library.go  sample_test.go
