load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jwt",
    srcs = [
        "jwt.go",
        "jwt_hmac.go",
        "jwt_rsa.go",
        "jwt_rsa_public.go",
    ],
    importpath = "github.com/monorepo/common/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//common/configloader",
        "//common/secret",
        "@com_github_google_uuid//:uuid",
        "@in_gopkg_square_go_jose_v2//:go_default_library",
        "@in_gopkg_square_go_jose_v2//jwt:go_default_library",
    ],
)

go_test(
    name = "jwt_test",
    srcs = [
        "jwt_hmac_test.go",
        "jwt_rsa_test.go",
        "jwt_test.go",
    ],
    embed = [":jwt"],
    deps = [
        "//common/secret",
        "@com_github_stretchr_testify//require",
    ],
)
