load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pointer",
    srcs = ["pointer.go"],
    importpath = "github.com/monorepo/common/pointer",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//constraints"],
)

go_test(
    name = "pointer_test",
    srcs = ["pointer_test.go"],
    embed = [":pointer"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
