load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secret",
    srcs = [
        "query_params.go",
        "string.go",
    ],
    importpath = "github.com/monorepo/common/secret",
    visibility = ["//visibility:public"],
)

go_test(
    name = "secret_test",
    srcs = [
        "query_params_test.go",
        "string_test.go",
    ],
    embed = [":secret"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
