load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "useragent",
    srcs = ["platform.go"],
    importpath = "github.com/monorepo/common/useragent",
    visibility = ["//visibility:public"],
)

go_test(
    name = "useragent_test",
    srcs = ["platform_test.go"],
    embed = [":useragent"],
    deps = ["@com_github_stretchr_testify//assert"],
)
