load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "interceptors",
    srcs = ["tracing.go"],
    importpath = "github.com/monorepo/common/httputils/interceptors",
    visibility = ["//visibility:public"],
    deps = [
        "//common/secret",
        "@com_github_f2prateek_train//:train",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/ext",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/tracer",
    ],
)

go_test(
    name = "interceptors_test",
    srcs = ["tracing_test.go"],
    embed = [":interceptors"],
    deps = [
        "//common/pointer",
        "@com_github_f2prateek_train//:train",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/ext",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/mocktracer",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/tracer",
    ],
)
