load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "slog",
    srcs = [
        "caller.go",
        "slog.go",
    ],
    importpath = "github.com/monorepo/common/logging/slog",
    visibility = ["//visibility:public"],
    deps = ["//common/logging"],
)

go_test(
    name = "slog_test",
    srcs = ["slog_test.go"],
    embed = [":slog"],
    deps = [
        "//common/logging",
        "//common/logging/loggingtest",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
