load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "Float64ObservableCounter.go",
        "Float64ObservableGauge.go",
        "Float64ObservableUpDownCounter.go",
        "Int64ObservableCounter.go",
        "Int64ObservableGauge.go",
        "Int64ObservableUpDownCounter.go",
    ],
    importpath = "github.com/monorepo/common/monitoring/metrics/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//mock",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_metric//embedded",
    ],
)
