load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "otelmetrics",
    srcs = [
        "config.go",
        "error_handler.go",
        "noop.go",
        "provider.go",
    ],
    importpath = "github.com/monorepo/common/monitoring/metrics/otelmetrics",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logging",
        "//common/monitoring/semconv",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc//:otlpmetricgrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp//:otlpmetrichttp",
        "@io_opentelemetry_go_otel_exporters_stdout_stdoutmetric//:stdoutmetric",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_metric//noop",
        "@io_opentelemetry_go_otel_sdk//:sdk",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
    ],
)
