load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ddtracing",
    srcs = [
        "config.go",
        "logger.go",
        "service.go",
        "tag.go",
    ],
    importpath = "github.com/monorepo/common/monitoring/tracing/ddtracing",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logging",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/tracer",
    ],
)
