load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "oteltracing",
    srcs = [
        "config.go",
        "provider.go",
    ],
    importpath = "github.com/monorepo/common/monitoring/tracing/oteltracing",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logging",
        "//common/monitoring/semconv",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:otlptracehttp",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:stdouttrace",
        "@io_opentelemetry_go_otel_sdk//:sdk",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
